# pyutils

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst  pyutils.mycollections.rst  pyutils.myio.rst  pyutils.myitertools.rst  pyutils.nettools.rst  pyutils.rst
pyutils/: collections.py  itertools.py  mycollections.py  myio.py  nettools.py
source/: conf.py  index.rst  modules.rst  pyutils.rst  tests.rst
tests/: test_collections.py  test_io.py  test_itertools.py
