[tool.poetry]
name = "pyutils"
version = "1.0.1"
description = "utils for python"
authors = ["upnt <upnt.github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
