[tool.poetry]
name = "pyutils"
version = "1.1.0"
description = "utils for python"
authors = ["upnt <upnt.github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.2"
networkx = "^3.2.1"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
isort = "^5.10.1"
pyright = "^1.1.352"
debugpy = "^1.8.1"
mypy = "^1.8.0"
pyproject-flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 100
ignore = ["E203"]

[tool.black]
line-length = 100
